fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,5 @@
     flex-direction: column;
     align-items: center;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
